Fix TextAreaField when focused in dark mode. Change classes names

--- a/src/components/TextFilter/TextFilter.css
+++ b/src/components/TextFilter/TextFilter.css
@@ -1,4 +1,4 @@
-.dcl.textFilter .text-input input {
+.dcl.text-filter .text-input input {
   font-size: 17px;
   line-height: 20px;
   background: none;
@@ -16,17 +16,17 @@
   background-position-x: 8px;
 }
 
-.dcl.textFilter .text-input input::placeholder {
+.dcl.text-filter .text-input input::placeholder {
   color: var(--secondary-text);
   font-weight: 400;
 }
 
 @media (max-width: 768px) {
-  .dcl.textFilter {
+  .dcl.text-filter {
     margin-bottom: 4px;
   }
 
-  .dcl.textFilter .ui.sub.header.name {
+  .dcl.text-filter .ui.sub.header.name {
     font-weight: normal;
   }
 }
